[package]
name = "dto"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.8"
# Utilise les dépendances du workspace
db = { path = "../db" }
serde.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "bigdecimal", "macros", "uuid"] }
