[package]
name = "dto"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.8"
# Utilise les dépendances du workspace
db = { path = "../database-lib" }
serde.workspace = true
serde_json = { version = "1" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "bigdecimal", "macros", "uuid"] }
