[package]
name = "dto"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.8"
# Utilise les dépendances du workspace
db = { path = "../database-lib" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "bigdecimal", "macros", "uuid"] }
utoipa = { version = "5.4.0", features = ["macros", "chrono"] }
